sort.basic.cocktail.AlgCocktailSort1.scala.error
Erreur de compilation :
AlgCocktailSort1:8: error: not found: value getNombreValeur
    for(i<- 0 to getNombreValeur()-2){
                 ^