sort.basic.cocktail.AlgCocktailSort1.scala.code
def cocktailSort() {
  var na=1
  var nb=1
  do{
    na=0
    nb=0
    for(i<- 0 to getNombreValeur()-2){
      if(getValeur(i)>getValeur(i+1)){
        echange(i,i+1)
        na=na+1
      }
    }
    for(i<- getNombreValeurs()-2 to 0 by -1){
      if(getValeur(i)>getValeur(i+1)){
        echange(i,i+1)
        nb=nb+1
  		}
		}
  } while (na!=0 || nb!=0)
  
}